--- a/src/main/webapp/css/fivein20/baseLayout.css
+++ b/src/main/webapp/css/fivein20/baseLayout.css
@@ -26,14 +26,14 @@
         text-align:center;
     }
     #groupOne {
-        position: absolute;
+        position:relative;
         background:#3c763d;
         width : 100%;
         height : 100%;
     }
 
     #groupTwo {
-        position: absolute;
+        position:relative;
         background:red;
         width : 100%;
         height : 100%;
@@ -42,14 +42,13 @@
 
     #groupOne .headDiv {
         position: relative;
+        z-index: 1;
         background:yellow;
         width : 100%;
-        height : 50px;
     }
 
     #groupOne .headDiv .headTable {
         background: #1b6d85;
-        height : 100%;
         border-top-color: Gray;
     }
 
@@ -74,12 +73,18 @@
     }
 
     #groupOne .contentDiv {
+        position:relative;
         background:whitesmoke;
         height : 85%;
     }
 
+    #dataTable {
+        background:whitesmoke;
+        position: absolute;
+    }
 
     #groupOne .bottomDiv {
+        z-index: 1;
         background:black;
         height : 10%;
     }
