--- a/src/main/webapp/css/fivein20/baseLayout.css
+++ b/src/main/webapp/css/fivein20/baseLayout.css
@@ -14,13 +14,25 @@
     }
 
     #groupTwo {
-        position:relative;
-        background:red;
-        width : 100%;
-        height : 100%;
-        display: none;
+        position: absolute;
+        background : #EEEEEC;
+        height : 33.3%;
+        width : 720px;
+        opacity: 1;
+        cursor: hand;
+        z-index: 2;
     }
-
+    .typeGroup {
+        position: absolute;
+        background : #EBEBEB;
+        height : 100%;
+        width : 100%;
+        opacity: 1;
+        cursor: hand;
+        z-index: 2;
+    }
+    
+    
     #groupOne .headDiv {
         position: relative;
         z-index: 1;
