--- a/src/main/webapp/css/fast3/styles2.css
+++ b/src/main/webapp/css/fast3/styles2.css
@@ -4,25 +4,26 @@
 		@desc   安徽快3vr2
 	*/
 	#Container #Header #tableHead #baseTableHead  tr{
-		background-color: #E4A474;
+		background-color: #1b6d85;
 	}
 	#Container #Header #tableHead #adTableHead tr{
-		background-color: #E4A474;
+		background-color: #1b6d85;
 	}
 	#Container #Footer #missOne table{
 		table-layout: fixed; border-color: #E1DCD8;width:100%;height:100%;rules : all;
 	}
 	#Container #Footer #missOne tr{
-		background-color: #E4A474;
+		background-color: #1b6d85;
 	}
 	#Container #Footer #missTwo #missTable thead{
 		background-color: #A2063C;
 	}
     #Container table{
 		table-layout: fixed;
-		border-color: #F0CEB5;
+		border-color: #e7acac;
 		width:100%;
 		height:100%;
+		color : white;
 		rules : all;
 		background-color: #fffffe;
 		text-align:center;
