--- a/src/main/webapp/css/fivein20/styles.css
+++ b/src/main/webapp/css/fivein20/styles.css
@@ -38,5 +38,19 @@
     .tdEvenCls{
         background: #EEEEEC	;
     }
+    
+    
+      .missTable
+    {
+        table-layout: fixed;
+		border-color: #F0CEB5;
+		width:100%;
+		height:100%;
+		text-align:center;
+		position:relative;
+		background-color: #ffffff;
+        font-family:晴圆;
+        font-size:14pt;
+    }
 
     
