--- a/src/main/webapp/css/fivein20/styles.css
+++ b/src/main/webapp/css/fivein20/styles.css
@@ -39,11 +39,10 @@
         background: #EEEEEC	;
     }
     
-    
-      .missTable
-    {
-        table-layout: fixed;
-		border-color: #F0CEB5;
+    .missTable{
+    	table-layout: fixed;
+		border-color: #888a85;
+		border : 1;
 		width:100%;
 		height:100%;
 		text-align:center;
@@ -52,5 +51,6 @@
         font-family:晴圆;
         font-size:14pt;
     }
+
 
     
