--- a/src/main/webapp/css/fivein20/styles.css
+++ b/src/main/webapp/css/fivein20/styles.css
@@ -7,7 +7,7 @@
 		height:100%;
 		text-align:center;
 		position:relative;
-		background-color: #ffffff;
+		background-color : white;
         font-family:晴圆;
         font-size:14pt;
     }
