补录程序发布版本

--- a/src/main/webapp/css/graph.css
+++ b/src/main/webapp/css/graph.css
@@ -14,7 +14,7 @@
 	    background: red;
 	}
 	
-	#circle {
+	.circle {
 	    -moz-border-radius: 10px;
 	    -webkit-border-radius: 10px;
 	    border-radius: 10px;
