--- a/src/main/webapp/css/fivein20/vr1styles.css
+++ b/src/main/webapp/css/fivein20/vr1styles.css
@@ -2,12 +2,12 @@
    table
     {
         table-layout: fixed;
-		border-color: #F0CEB5;
+		border-color: Gray;;
 		width:100%;
 		height:100%;
 		text-align:center;
 		position:relative;
-		background-color : #FAFAD2;
+		background-color : white;
         font-family:晴圆;
         font-size:14pt;
     }
@@ -33,10 +33,10 @@
     }
 
     .tdOddCls{
-        background-color:#FEE7EF;
+        background-color:#E0EEEE;
     }
     .tdEvenCls{
-        background: #EEEEEC	;
+        background: #CCE5A3;
     }
     
     .missTable{
