--- a/src/main/webapp/css/fivein20/styles.css
+++ b/src/main/webapp/css/fivein20/styles.css
@@ -2,14 +2,17 @@
    table
     {
         table-layout: fixed;
-		border-color: #F0CEB5;
+		border-color: #e7acac;
 		width:100%;
 		height:100%;
+		color : white;
+		rules : all;
+		background-color: #fffffe;
 		text-align:center;
 		position:relative;
-		background-color : white;
         font-family:晴圆;
-        font-size:14pt;
+        font-size:12pt;
+        text-align:center;
     }
 
     table tr
