--- a/src/main/webapp/css/fivein20/vr2styles.css
+++ b/src/main/webapp/css/fivein20/vr2styles.css
@@ -92,7 +92,7 @@
     }
     table tr td
     {
-        font-family:Arial;
+        font-family:晴圆;
         font-size:12pt;
         color:Black;
         text-align:center;
