--- a/src/main/webapp/css/fivein20/vr1styles-supersmall.css
+++ b/src/main/webapp/css/fivein20/vr1styles-supersmall.css
@@ -40,6 +40,7 @@
     #groupOne .headDiv .headTable .trHead
     {
         font-weight:800;
+        font-size : 8px;
         color: #FFFFFF;
         text-align:center;
     }
@@ -81,11 +82,13 @@
 		text-align:center;
 		position:relative;
         font-family:晴圆;
+        font-size:14pt;
     }
 
     table tr td
     {
         font-family:晴圆;
+        font-size:5pt;
         color:Black;
         text-align:center;
         padding : 0px;
@@ -104,25 +107,21 @@
     .tdEvenCls{
         background: #CCE5A3;
     }
-    .tdMissCls{
-    	background: #FFFACD;
-    }
     
     .missTable{
     	table-layout: fixed;
-		width:50%;
-		height: 12%;
+		border-color: #888a85;
+		border : 1;
+		width:100%;
+		height:100%;
 		text-align:center;
-		float : left;
 		position:relative;
 		background-color: #ffffff;
         font-family:晴圆;
-        border-right : Gray 1px solid;
+        font-size:14pt;
     }
-   .missTable th{
-		background: #8B0000;
-		color : white;
-		font-family:晴圆;
-   }
+  .smallFontSize{
+ 	font-size:5pt;
+ }
 
     
